# ftb-downloader

./: Cargo.toml  README.md  flake.nix  flake.nix.old
.github/workflows/: release.yml  release2.yml  rust.yml
src/: downloader.rs  gui.rs  main.rs
