[package]
name = "ftb-downloader"
version = "v1.0.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
eframe = { version = "0.30.0", features = ["wayland"] }
egui = "0.30.0"
egui_file = "0.19.0"
reqwest = "0.12.9"
rfd = "0.15.1"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
